--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <title>Закрывающий тег</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -14,6 +18,8 @@
   </head>
   <body class="page">
     <header class="header">
+      <h1 class="header__title">&lt/HTML&gt;</h1>
+      <p class="header__subtitle">закрывающий тег</p>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -40,7 +46,36 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="content">
+      <section class="card-list">
+        <article class="card">
+          <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
+          <div class="card__image">
+            <img class="card__image-picture" src="./images/car.png">
+            <p class="card__image-label">&lt/HTML&gt;</p>
+          </div>
+          <div class="card__description">
+            <div class="card__text">
+              <p class="card__paragrapgh">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+              <p class="card__paragrapgh">Место для ваших воспоминаний о начале обучения.</p>
+            </div>
+            <fieldset class="like-field">
+              <button class="card__icon-button">
+                <img src="./svg/heart in paths.svg" class="like-icon">
+              </button>
+              <button class="card__like-button">
+                <span class="button-text">Like</span>
+              </button>
+            </fieldset>
+          </div>
+        </article>
+    </section>
+    <button class="save-button">
+      <svg width="21" height="21" viewBox="0 0 21 21">
+        <use href="./svg/floppy.svg#floppy"></use>
+      </svg> 
+      <span class="button-text">Сохранить на память</span></button>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
