выполнен шаг задания 9

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </article>
     </section>
     <button class="save-button">
-      <svg width="21" height="21" viewBox="0 0 21 21">
+      <svg width="21" height="21" viewBox="0 0 21 21" class="floppy">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg> 
       <span class="button-text">Сохранить на память</span></button>
