--- a/index.html
+++ b/index.html
@@ -82,11 +82,23 @@
           </div>
         </article>
     </section>
-    <button class="save-button">
+    <button class="save-button" type="button" onclick="window.saveDialog.showModal()" aria-controls="saveDialog">
       <svg width="21" height="21" viewBox="0 0 21 21" class="floppy">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg> 
-      <span class="button__text">Сохранить на память</span></button>
+      <span class="button__text">Сохранить на память</span>
+    </button>
+    <dialog class="save-dialog" aria-label="Сохранить на память" id="saveDialog">
+      <div class="save-dialog__description">
+        <svg width="39" height="39" viewBox="0 0 40 40" class="floppy">
+          <use href="./svg/floppy.svg#floppy"></use>
+        </svg> 
+        <p class="save-dialog__text">Вставьте дискету, чтобы продолжить</p>
+      </div>
+      <button class="save-dialog__button" type="button" onclick="window.saveDialog.close()">
+        <span class="button__text">ок</span>
+      </button>
+    </dialog>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
