добавлен -text-stroke для поддерживаемых браузеров, добавлен общий стиль для кнопок ОК, Like, Сохранить на память

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p class="card__paragrapgh">Первый шаг к наверняка большим изменениям.</p>
         </div>
         <fieldset class="like-field">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none">
 
               <g class="heart">
@@ -74,7 +74,7 @@
 
             </svg>
           </button>
-          <button class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </fieldset>
@@ -95,7 +95,7 @@
           <p class="card__paragrapgh">Осознание барьеров — возможность видеть пути для роста.</p>
         </div>
         <fieldset class="like-field">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none">
 
               <g class="heart">
@@ -114,7 +114,7 @@
 
             </svg>
           </button>
-          <button class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </fieldset>
@@ -134,7 +134,7 @@
           <p class="card__paragrapgh">Радость первых достижений — мотивация для будущих вызовов! </p>
         </div>
         <fieldset class="like-field">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none">
 
               <g class="heart">
@@ -153,7 +153,7 @@
 
             </svg>
           </button>
-          <button class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </fieldset>
@@ -173,7 +173,7 @@
           <p class="card__paragrapgh">Стремление к идеалу бесконенчо. Важно хотя бы доводить дело до конца.</p>
         </div>
         <fieldset class="like-field">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none">
 
               <g class="heart">
@@ -192,7 +192,7 @@
 
             </svg>
           </button>
-          <button class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </fieldset>
@@ -213,7 +213,7 @@
           <p class="card__paragrapgh">Важно иметь поддержку. Учиться вместе легче и вдохновляюще!</p>
         </div>
         <fieldset class="like-field">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none">
 
               <g class="heart">
@@ -232,7 +232,7 @@
 
             </svg>
           </button>
-          <button class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </fieldset>
@@ -251,7 +251,7 @@
           <p class="card__paragrapgh">Смена перспективы открывает новые возможности.</p>
         </div>
         <fieldset class="like-field">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none">
 
               <g class="heart">
@@ -270,7 +270,7 @@
 
             </svg>
           </button>
-          <button class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </fieldset>
@@ -291,7 +291,7 @@
             приоритетах.</p>
         </div>
         <fieldset class="like-field">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none">
 
               <g class="heart">
@@ -310,7 +310,7 @@
 
             </svg>
           </button>
-          <button class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </fieldset>
@@ -351,13 +351,13 @@
 
             </svg>
           </button>
-          <button type="button" class="card__like-button">
+          <button type="button" class="card__like-button content-button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </div>
     </section>
-    <button class="save-button" type="button" onclick="window.saveDialog.showModal()" aria-controls="saveDialog">
+    <button class="save-button content-button" type="button" onclick="window.saveDialog.showModal()" aria-controls="saveDialog">
       <svg width="21" height="21" viewBox="0 0 21 21" class="floppy">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg>
@@ -371,7 +371,7 @@
         <p class="save-dialog__text">Вставьте дискету, чтобы продолжить</p>
       </div>
       <form method="dialog">
-        <button class="save-dialog__button" type="sumbit">
+        <button class="save-dialog__button content-button" type="sumbit">
           <span class="button__text">ок</span>
         </button>
       </form>
